adding new index file

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <div class="footer container">
     <hr>
-    <p class="text-muted text-center">© 2017 Eric Gieg</p>
+    <p class="text-muted text-center">© 2017 Eric Peter Gieg</p>
 </div>
 </div>
 
